--- a/style.css
+++ b/style.css
@@ -26,8 +26,8 @@ body {
     padding-top: 200px;
 
 }
-.page-header {
-    font-size: 50px;
+h1 {
+    font-size: 40px;
     font-weight: bolder;
 }
 footer {
