--- a/style.css
+++ b/style.css
@@ -1,19 +1,26 @@
 body, html {
     height: 100%;
 }
+
 .bg-image {
     background-image: url("./images/backgroundImage.JPG");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    
-
 }
+
 .nav-link {
     font-size: 30px;
     font-weight: 400;
 }
+
 .navbar-brand {
     font-size: 30px;
+}
+
+.contacts {
+    justify-content: center;
+    align-items: center;
+    display: flex;
 }
