--- a/style.css
+++ b/style.css
@@ -2,13 +2,17 @@ body, html {
     height: 100%;
 }
 
-/* .bg-image {
+.bg-image {
     background-image: url("./images/backgroundImage.JPG");
     height: 100%;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-} */
+}
+
+.fa-node {
+  color: green;
+}
 
 .nav-link {
     font-size: 30px;
